# advent-of-code-2025

./: CLI.md  README.md  day1.py  day2.py  day3.py  day4.py  day5.py  dayx.py  pyproject.toml  template.py
Day01/: day01.py
Day02/: day02.py  puzzle.md
Day03/: day03.py  puzzle.md
Day04/: day04.py  puzzle.md
Day05/: day05.py  puzzle.md
Day06/: day06.py
Day07/: day07.py
Day08/: day08.py
Day09/: day09.py  test
Day10/: day10.py  sandbox.py
Day11/: day11.py
archive/2023/archive/: day 10.py  day 4.py  day 5.py  day 6.py  day 7.py  day 8.py  day 9.py
inputs/Day 5/: val.txt
src/: cli.py
