[project]
	dependencies = [
		"pulp>=3.3.0",
		"pytest>=9.0.1",
		"sympy>=1.14.0",
		"typer>=0.20.0",
]
	description = "Add your description here"
	name = "adventofcode"
	readme = "README.md"
	requires-python = ">=3.13"
	version = "0.1.0"

	[project.scripts]
		setup = "cli:app"

[tool.uv]
	package = true
